# lic

./: Cargo.toml  README.md  install.sh
.github/workflows/: additional-targets.yml  release.yml
src/: main.rs
