[package]
name = "lic"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive", "color"] }
cliclack = "0.3.7"
reqwest = { version = "0.12.28", features = ["json"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
chrono = "0.4.42"
